--- a/index.html
+++ b/index.html
@@ -7,21 +7,26 @@
     <title>Tic Tac Toe</title>
 
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./fontawesome-free-6.3.0-web/css/all.css" />
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="grid-container">
-      <div class="grid-item" id="box1"></div>
-      <div class="grid-item" id="box2"></div>
-      <div class="grid-item" id="box3"></div>
-      <div class="grid-item" id="box4"></div>
-      <div class="grid-item" id="box5"></div>
-      <div class="grid-item" id="box6"></div>
-      <div class="grid-item" id="box7"></div>
-      <div class="grid-item" id="box8"></div>
-      <div class="grid-item" id="box9"></div>
+      <div class="grid-item" id="box1">1</div>
+      <div class="grid-item" id="box2">2</div>
+      <div class="grid-item" id="box3">3</div>
+      <div class="grid-item" id="box4">4</div>
+      <div class="grid-item" id="box5">5</div>
+      <div class="grid-item" id="box6">6</div>
+      <div class="grid-item" id="box7">7</div>
+      <div class="grid-item" id="box8">8</div>
+      <div class="grid-item" id="box9">9</div>
+    </div>
+    <div id="playAgainContainer">
+      <button id="playAgain"><h2>Play again</h2></button>
     </div>
 
     <script type="application/javascript" src="./JS/script.js"></script>
+    <script src="./fontawesome-free-6.3.0-web/js/all.js"></script>
   </body>
 </html>
