--- a/index.html
+++ b/index.html
@@ -7,26 +7,49 @@
     <title>Tic Tac Toe</title>
 
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./fontawesome-free-6.3.0-web/css/all.css" />
+    <link
+      rel="stylesheet"
+      href="./fontawesome-free-6.3.0-web/css/fontawesome.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./fontawesome-free-6.3.0-web/css/all.min.css"
+    />
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="grid-container">
-      <div class="grid-item" id="box1">1</div>
-      <div class="grid-item" id="box2">2</div>
-      <div class="grid-item" id="box3">3</div>
-      <div class="grid-item" id="box4">4</div>
-      <div class="grid-item" id="box5">5</div>
-      <div class="grid-item" id="box6">6</div>
-      <div class="grid-item" id="box7">7</div>
-      <div class="grid-item" id="box8">8</div>
-      <div class="grid-item" id="box9">9</div>
+      <div class="gridBox" id="box1">1</div>
+      <div class="gridBox" id="box2">2</div>
+      <div class="gridBox" id="box3">3</div>
+      <div class="gridBox" id="box4">4</div>
+      <div class="gridBox" id="box5">5</div>
+      <div class="gridBox" id="box6">6</div>
+      <div class="gridBox" id="box7">7</div>
+      <div class="gridBox" id="box8">8</div>
+      <div class="gridBox" id="box9">9</div>
     </div>
     <div id="playAgainContainer">
       <button id="playAgain"><h2>Play again</h2></button>
     </div>
 
+    <div>
+      <img
+        src="./fontawesome-free-6.3.0-web/svgs/solid/x-solid.svg"
+        class="cross"
+        alt=""
+      />
+    </div>
+    <div>
+      <img
+        src="./fontawesome-free-6.3.0-web/svgs/solid/o-solid.svg"
+        class="cross"
+        alt=""
+      />
+    </div>
+
     <script type="application/javascript" src="./JS/script.js"></script>
-    <script src="./fontawesome-free-6.3.0-web/js/all.js"></script>
+    <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
+    <script src="./fontawesome-free-6.3.0-web/js/all.min.js"></script>
   </body>
 </html>
