tracking where x and o goes on the board

--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="grid-container">
-      <div class="gridBox" id="box1">1</div>
-      <div class="gridBox" id="box2">2</div>
-      <div class="gridBox" id="box3">3</div>
-      <div class="gridBox" id="box4">4</div>
-      <div class="gridBox" id="box5">5</div>
-      <div class="gridBox" id="box6">6</div>
-      <div class="gridBox" id="box7">7</div>
-      <div class="gridBox" id="box8">8</div>
-      <div class="gridBox" id="box9">9</div>
+      <div class="gridBox" data-row="0" data-col="0">1</div>
+      <div class="gridBox" data-row="0" data-col="1">2</div>
+      <div class="gridBox" data-row="0" data-col="2">3</div>
+      <div class="gridBox" data-row="1" data-col="0">4</div>
+      <div class="gridBox" data-row="1" data-col="1">5</div>
+      <div class="gridBox" data-row="1" data-col="2">6</div>
+      <div class="gridBox" data-row="2" data-col="0">7</div>
+      <div class="gridBox" data-row="2" data-col="1">8</div>
+      <div class="gridBox" data-row="2" data-col="2">9</div>
     </div>
     <div id="playAgainContainer">
       <button id="playAgain"><h2>Play again</h2></button>
