--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="grid-container">
-      <div class="gridBox" data-row="0" data-col="0">1</div>
-      <div class="gridBox" data-row="0" data-col="1">2</div>
-      <div class="gridBox" data-row="0" data-col="2">3</div>
-      <div class="gridBox" data-row="1" data-col="0">4</div>
-      <div class="gridBox" data-row="1" data-col="1">5</div>
-      <div class="gridBox" data-row="1" data-col="2">6</div>
-      <div class="gridBox" data-row="2" data-col="0">7</div>
-      <div class="gridBox" data-row="2" data-col="1">8</div>
-      <div class="gridBox" data-row="2" data-col="2">9</div>
+      <div class="gridBox" data-row="0" data-col="0"></div>
+      <div class="gridBox" data-row="0" data-col="1"></div>
+      <div class="gridBox" data-row="0" data-col="2"></div>
+      <div class="gridBox" data-row="1" data-col="0"></div>
+      <div class="gridBox" data-row="1" data-col="1"></div>
+      <div class="gridBox" data-row="1" data-col="2"></div>
+      <div class="gridBox" data-row="2" data-col="0"></div>
+      <div class="gridBox" data-row="2" data-col="1"></div>
+      <div class="gridBox" data-row="2" data-col="2"></div>
     </div>
     <div id="playAgainContainer">
       <button id="playAgain"><h2>Play again</h2></button>
     </div>
 
-    <div>
+    <!-- <div>
       <img
         src="./fontawesome-free-6.3.0-web/svgs/solid/x-solid.svg"
         class="cross"
@@ -46,7 +46,7 @@
         class="cross"
         alt=""
       />
-    </div>
+    </div> -->
 
     <script type="application/javascript" src="./JS/script.js"></script>
     <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
