--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       rel="stylesheet"
       href="./fontawesome-free-6.3.0-web/css/all.min.css"
     />
+    <link rel="stylesheet" href="./Bootstrap5/css/bootstrap.css" />
   </head>
   <body>
     <h1>Tic Tac Toe</h1>
@@ -29,26 +30,21 @@
       <div class="gridBox" data-row="2" data-col="1"></div>
       <div class="gridBox" data-row="2" data-col="2"></div>
     </div>
-    <div id="playAgainContainer">
+    <!-- <div id="playAgainContainer">
       <button id="playAgain"><h2>Play again</h2></button>
-    </div>
+    </div> -->
 
-    <!-- <div>
-      <img
-        src="./fontawesome-free-6.3.0-web/svgs/solid/x-solid.svg"
-        class="cross"
-        alt=""
-      />
+    <div id="playAgainContainer">
+      <button type="button" class="btn btn-success" id="playAgain">
+        <h4>Play again</h4>
+      </button>
     </div>
-    <div>
-      <img
-        src="./fontawesome-free-6.3.0-web/svgs/solid/o-solid.svg"
-        class="cross"
-        alt=""
-      />
+    <!-- <div class="alert alert-success" role="alert">
+      A simple success alert—check it out!
     </div> -->
 
     <script type="application/javascript" src="./JS/script.js"></script>
+    <script src="./Bootstrap5/js/bootstrap.js"></script>
     <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
     <script src="./fontawesome-free-6.3.0-web/js/all.min.js"></script>
   </body>
