x and o winner distinguished

--- a/index.html
+++ b/index.html
@@ -37,8 +37,12 @@
       </button>
     </div>
 
-    <div id="alertContainer">
-      <div class="alert alert-success" role="alert" id="winAlertBox">
+    <di v id="alertContainer">
+      <div
+        class="alert alert-success winnerAlert"
+        role="alert"
+        id="winAlertBox"
+      >
         <h3>
           <strong> You Win!</strong>
           <button
