--- a/index.html
+++ b/index.html
@@ -37,14 +37,22 @@
       </button>
     </div>
 
-    <di v id="alertContainer">
-      <div
-        class="alert alert-success winnerAlert"
-        role="alert"
-        id="winAlertBox"
-      >
+    <div id="alertContainer">
+      <div class="alert alert-success xWinnerAlert" role="alert" id="xAlertBox">
         <h3>
-          <strong> You Win!</strong>
+          <strong> X Wins!</strong>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="alert"
+            aria-label="Close"
+          ></button>
+        </h3>
+      </div>
+
+      <div class="alert alert-danger oWinnerAlert" role="alert" id="oAlertBox">
+        <h3>
+          <strong> O Wins!</strong>
           <button
             type="button"
             class="btn-close"
