--- a/index.html
+++ b/index.html
@@ -1,71 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Tic Tac Toe</title>
 
-    <link rel="stylesheet" href="./css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./fontawesome-free-6.3.0-web/css/fontawesome.css"
-    />
-    <link
-      rel="stylesheet"
-      href="./fontawesome-free-6.3.0-web/css/all.min.css"
-    />
-    <link rel="stylesheet" href="./Bootstrap5/css/bootstrap.css" />
-  </head>
-  <body>
-    <h1>Tic Tac Toe</h1>
-    <div class="grid-container">
-      <div class="gridBox" data-row="0" data-col="0"></div>
-      <div class="gridBox" data-row="0" data-col="1"></div>
-      <div class="gridBox" data-row="0" data-col="2"></div>
-      <div class="gridBox" data-row="1" data-col="0"></div>
-      <div class="gridBox" data-row="1" data-col="1"></div>
-      <div class="gridBox" data-row="1" data-col="2"></div>
-      <div class="gridBox" data-row="2" data-col="0"></div>
-      <div class="gridBox" data-row="2" data-col="1"></div>
-      <div class="gridBox" data-row="2" data-col="2"></div>
-    </div>
+        <link rel="stylesheet" href="./css/style.css" />
+        <link
+            rel="stylesheet"
+            href="./fontawesome-free-6.3.0-web/css/fontawesome.css" />
+        <link
+            rel="stylesheet"
+            href="./fontawesome-free-6.3.0-web/css/all.min.css" />
+        <link rel="stylesheet" href="./Bootstrap5/css/bootstrap.css" />
+    </head>
+    <body>
+        <h1>Tic Tac Toe</h1>
+        <div class="grid-container">
+            <div class="gridBox" data-row="0" data-col="0"></div>
+            <div class="gridBox" data-row="0" data-col="1"></div>
+            <div class="gridBox" data-row="0" data-col="2"></div>
+            <div class="gridBox" data-row="1" data-col="0"></div>
+            <div class="gridBox" data-row="1" data-col="1"></div>
+            <div class="gridBox" data-row="1" data-col="2"></div>
+            <div class="gridBox" data-row="2" data-col="0"></div>
+            <div class="gridBox" data-row="2" data-col="1"></div>
+            <div class="gridBox" data-row="2" data-col="2"></div>
+        </div>
 
-    <div id="playAgainContainer">
-      <button type="button" class="btn btn-success" id="playAgain">
-        <h4>Play again</h4>
-      </button>
-    </div>
+        <div id="playAgainContainer">
+            <button type="button" class="btn btn-success" id="playAgain">
+                <h4>Play again</h4>
+            </button>
+        </div>
 
-    <div id="alertContainer">
-      <div class="alert alert-success xWinnerAlert" role="alert" id="xAlertBox">
-        <h3>
-          <strong> X Wins!</strong>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
-            aria-label="Close"
-          ></button>
-        </h3>
-      </div>
+        <div id="alertContainer">
+            <div
+                class="alert alert-success xWinnerAlert"
+                role="alert"
+                id="xAlertBox">
+                <h3>
+                    <strong> X Wins!</strong>
+                    <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="alert"
+                        aria-label="Close"></button>
+                </h3>
+            </div>
 
-      <div class="alert alert-danger oWinnerAlert" role="alert" id="oAlertBox">
-        <h3>
-          <strong> O Wins!</strong>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="alert"
-            aria-label="Close"
-          ></button>
-        </h3>
-      </div>
-    </div>
+            <div
+                class="alert alert-danger oWinnerAlert"
+                role="alert"
+                id="oAlertBox">
+                <h3>
+                    <strong> O Wins!</strong>
+                    <button
+                        type="button"
+                        class="btn-close"
+                        data-bs-dismiss="alert"
+                        aria-label="Close"></button>
+                </h3>
+            </div>
+        </div>
 
-    <script type="application/javascript" src="./JS/script.js"></script>
-    <script src="./Bootstrap5/js/bootstrap.js"></script>
-    <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
-    <script src="./fontawesome-free-6.3.0-web/js/all.min.js"></script>
-  </body>
+        <script type="application/javascript" src="./JS/script.js"></script>
+        <script src="./Bootstrap5/js/bootstrap.js"></script>
+        <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
+        <script src="./fontawesome-free-6.3.0-web/js/all.min.js"></script>
+    </body>
 </html>
