--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             </div>
         </div>
 
-        <script type="application/javascript" src="./JS/script.js"></script>
+        <!-- <script type="application/javascript" src="./JS/script.js"></script> -->
+        <script type="application/javascript" src="JS/scriptMed.js"></script>
         <script src="./Bootstrap5/js/bootstrap.js"></script>
         <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
         <script src="./fontawesome-free-6.3.0-web/js/all.min.js"></script>
