--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
         </div>
 
         <!-- <script type="application/javascript" src="./JS/script.js"></script> -->
-        <script type="application/javascript" src="JS/scriptMed.js"></script>
+        <!-- <script type="application/javascript" src="JS/scriptMed.js"></script> -->
+        <script type="application/javascript" src="JS/scriptHard.js"></script>
         <script src="./Bootstrap5/js/bootstrap.js"></script>
         <script src="./fontawesome-free-6.3.0-web/js/fontawesome.js"></script>
         <script src="./fontawesome-free-6.3.0-web/js/all.min.js"></script>
